<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/purchases_item_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/item_name"/>

    <TextView
        android:id="@+id/purchases_item_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/purchases_item_name1"
        app:layout_constraintTop_toBottomOf="@id/purchases_item_name1"
        android:text="@string/purchases_item_name"/>

    <TextView
        android:id="@+id/purchases_item_price1"
        android:layout_marginStart="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/purchases_item_name1"
        android:text="@string/item_price"/>

    <TextView
        android:id="@+id/purchases_item_price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/purchases_item_price1"
        app:layout_constraintTop_toBottomOf="@id/purchases_item_price1" />

    <TextView
        android:id="@+id/purchases_item_cat1"
        android:layout_marginStart="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/purchases_item_price1"
        android:text="@string/group_tag"/>

    <TextView
        android:id="@+id/purchases_item_cat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/purchases_item_cat1"
        app:layout_constraintTop_toBottomOf="@id/purchases_item_cat1"
        android:text="@string/purchases_item_cat"/>

    <TextView
        android:id="@+id/purchases_item_date1"
        android:layout_marginStart="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/purchases_item_cat1"
        android:text="@string/purchased_on"/>

    <TextView
        android:id="@+id/purchases_item_date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/purchases_item_date1"
        app:layout_constraintTop_toBottomOf="@id/purchases_item_date1"
        android:text="@string/purchases_item_date"/>

    <ImageButton
        android:id="@+id/delete_btn"
        android:onClick="onDeletePurchClick"
        android:layout_width="30sp"
        android:layout_height="40sp"
        android:tint="@color/red"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/purchases_item_cat2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    android:background="@color/cardview_shadow_start_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>