<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:id="@+id/add_purchase_scrollview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddPurchaseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_purchase_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddPurchaseActivity">

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28sp"
            android:layout_marginTop="56sp"
            android:text="@string/item_price"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/price_field"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/price_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_price"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28sp"
            android:layout_marginTop="22sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/item_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_field" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:ems="10"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:hint="@string/name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_name" />

        <TextView
            android:id="@+id/purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28sp"
            android:layout_marginTop="22sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/date_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_field" />

        <CalendarView
            android:id="@+id/date_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/purchase_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/group_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28sp"
            android:layout_marginTop="22sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/group_tag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_selector" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="20sp"
            app:layout_constraintTop_toBottomOf="@id/group_tag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_cat_btn"/>

        <ImageButton
            android:id="@+id/add_cat_btn"
            android:onClick="onAddCatClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:background="@color/light_grey"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/category_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/category_spinner" />

        <Button
            android:id="@+id/add_button"
            android:onClick="onAddClicked"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@id/add_cat_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>